# reCamera-Intellisense

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build-mcp.yaml
recamera-intellisence-mcp/: Cargo.toml
recamera-intellisence-mcp/src/: api_client.rs  event_store.rs  gpio.rs  main.rs  models.rs  server.rs  storage.rs  types.rs  ws_client.rs
recamera-intellisence-mcp/src/devices/: client.rs  mod.rs
recamera-intellisence-mcp/src/tools/: capture.rs  detection.rs  events.rs  gpio.rs  mod.rs
recamera-intellisense-daemon/: Cargo.toml
recamera-intellisense-daemon/src/: event_store.rs  http_server.rs  main.rs  models.rs  ws_client.rs
recamera-intellisense-mcp/: Cargo.toml
recamera-intellisense-mcp/src/: api_client.rs  capture.rs  detection.rs  device_store.rs  main.rs  records.rs  server.rs  storage.rs  types.rs  util.rs
recamera-intellisense-mcp/src/api/: acoustic.rs  capture.rs  daemon.rs  gpio.rs  mod.rs  model.rs  relay.rs  rule.rs  storage.rs
recamera-intellisense-sdk/: pyproject.toml  setup.py
recamera-intellisense-sdk/recamera_intellisense/: __init__.py  __main__.py  _cli.py  _config.py  _errors.py  _http.py  acoustic.py  capture.py  detection.py  device.py  files.py  gpio.py  model.py  records.py  relay.py  rule.py  storage.py
scripts/: install-skill.py  install-skill.sh  setup-mcp.py  setup-skill.py
skills/recamera-intellisense/: REFERENCE.md  SKILL.md
skills/recamera-intellisense/scripts/: rc_capture.py  rc_common.py  rc_detection.py  rc_device.py  rc_gpio.py
src/: http_server.rs  main.rs  ws_client.rs
