[package]
name = "recamera-intellisense-mcp"
version = "2.0.6"
edition = "2021"
description = "reCamera Intellisense MCP server"

[dependencies]
rmcp = { version = "1.2", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "query", "rustls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
dirs = "6"

[profile.release]
opt-level = "s"
lto = true
strip = true
